# NTNU2014

NFU0007_Norskkurs/assignment1/: norsk_a1.doc
TET4135_Energysystems/Assignments/: Vorlage.tex
TET4135_Energysystems/Assignments/Ass1/: ass1.tex
TET4135_Energysystems/Assignments/Ass2/: ass2.tex
TET4135_Energysystems/Assignments/Ass3/: ass3.tex
TET4135_Energysystems/Assignments/Ass4/: ass4.tex
TET4135_Energysystems/Assignments/Ass5/: ass5.aux  ass5.tex
TET4135_Energysystems/Assignments/Ass6/: ass6.tex
TET4135_Energysystems/Assignments/Ass8/: ass6.tex
TET4135_Energysystems/Assignments/Ass9/: ass9.tex
TMA4280_Supercomputing/Exercise/ex2/: ex2.c  storage.c
TMA4280_Supercomputing/Exercise/ex3/: CMakeLists.txt  ex3.c
TMA4280_Supercomputing/Exercise/ex4/: ex4.c  protocol.tex
TMA4280_Supercomputing/Exercise/ex6/: CMakeLists.txt  job.sh  poissonparallel.c  report.tex
TMA4280_Supercomputing/Exercise/ex6/common/: CMakeCache.txt  Makefile  cmake_install.cmake  common.c
TMA4280_Supercomputing/Exercise/ex6/src/: CMakeLists.txt  buildTiming.sh  poisson.c  poissonparallel.c  runTiming.sh
TMA4280_Supercomputing/Exercise/ex6/src/dataAnalysis/: genGraphs.m  genSpeedUp.m
TTT4170_Audiotechnology/Lab1/: protocol.tex
TTT4170_Audiotechnology/Lab2/: protocol.tex  report.tex
TTT4170_Audiotechnology/Lab3/: protocol.tex
TTT4170_Audiotechnology/Lab3/Figures/: FR50ms.wmb  TaskB_105deg.txt  TaskB_105deg.wmb  TaskB_120deg.txt  TaskB_120deg.wmb  TaskB_135deg.txt  TaskB_135deg.wmb  TaskB_150deg.txt  TaskB_150deg.wmb  TaskB_15deg.txt  TaskB_15deg.wmb  TaskB_165deg.txt  (+17 more)
(+5 files in other folders)
